--- a/style.css
+++ b/style.css
@@ -1,5 +1,6 @@
 :root {
     --cor-de-fundo: #EBECEE;
+    --branco: #FFFFFF;
 }
 body {
     background-color: var(--cor-de-fundo);
@@ -7,4 +8,12 @@ body {
 h1 {
     background-color: white;
 }
-
+.cabeçalho_menu-hamburguer {
+    width: 24px;
+    height: 24px;
+    display: inline-block;
+    background-image: url("../img/Menu.svg");
+    background-repeat: no-repeat;
+    background-position: center;
+}
+@import url("styles/header.css");
